# Prospectus-AI

./: .gitattributes  .gitignore  .vercelignore  Guidelines for Writing Prospectus Sections.docx  Makefile  README.md  Sponsor Counsel Drafting & AI Validation Framework for HKEX Technology‑Sector IPO Prospectuses.docx  agent1.py  agent2.py  agent2_section_requirements.json  compute_module.py  data_old.json  export_code_to_word.py  export_docx.py  issuer_metadata.json  llm_openai.py  llm_qwen.py  netlify.toml  package-lock.json  package.json  prospectus_structure_ AI agent.docx  requirements-docgraph.txt  requirements.txt  run_full_pipeline.sh  setup.sh  tsconfig.json  vercel.json
platform-module/: pyproject.toml
platform-module/desktop/: README.md
platform-module/examples/: run_pipeline.py
platform-module/prospectus_platform/: __init__.py
platform-module/src/: contracts.ts
platform-module/web/: .env.local  prospectus_section_prompts_complete.json
platform-module/web/.next/: BUILD_ID  app-path-routes-manifest.json  fallback-build-manifest.json  next-server.js.nft.json  prerender-manifest.json  required-server-files.js  trace  trace-build
platform-module/web/.next/cache/: .previewinfo  .rscinfo  .tsbuildinfo
platform-module/web/.next/dev/: prerender-manifest.json  trace
platform-module/web/.next/server/: next-font-manifest.js  server-reference-manifest.json
platform-module/web/.next/types/: routes.d.ts  validator.ts
platform-module/web/src/app/: page.tsx
platform-module/web/src/lib/: app-settings.ts  draft-cleaning.ts  llm-provider-config.ts  (+1 more)
(+887 files in other folders)
