[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "prospectus-platform-module"
version = "0.1.0"
description = "Prospectus platform orchestration (non-AI)"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["prospectus_platform*"]
