[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "prospectus-ai-module"
version = "0.1.0"
description = "Prospectus AI agents (Agent1 + Agent2 LangGraph pipeline)"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
  "openpyxl>=3.1",
  "langgraph",
  "transformers>=4.45.0",
  "torch>=2.0.0",
  "accelerate>=0.30.0",
  "openai>=1.40.0",
  "anthropic>=0.40.0",
  "huggingface_hub>=0.24.0",
  "sentence-transformers>=2.2.0",
  "python-docx>=1.0",
  "pymupdf>=1.24",
]

[project.scripts]
prospectus-ai = "prospectus_ai.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["prospectus_ai*"]
